# dogmatica

./: .gitignore  LICENSE  README.md  pyproject.toml
Invoice-Dashboard/: .gitignore  README.md  pyproject.toml
Invoice-Dashboard/data/: invoices.json
Invoice-Dashboard/src/invoice_dashboard/: __init__.py  dashboard.py
Invoice-Dashboard/tests/: test_dashboard.py
docs/: README.md
simple-python-neural-network-xor/: README.md  main.py  neural_network.py  utils.py
src/dogmatica/: __init__.py  example.py
tests/: test_example.py
