[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dogmatica"
version = "0.1.0"
authors = [
    {name = "The Dogmatica Authors"},
]
description = "Example project structure"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
